Disallow CSS custom properties as descriptors

CSS custom properties are properties so should be not allowed where we
only otherwise allow descriptors. This patch makes the parser reject
custom properties in at rules (excluding in keyframe blocks, which take
properties instead of descriptors).

BUG=641873

Review-Url: https://codereview.chromium.org/2478623003
Cr-Commit-Position: refs/heads/master@{#430484}

Former-commit-id: bfc0527d0b204f20d238d8e998f9485b637dd4a3